// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectorComponent should render InspectorComponent 0: test--0 1`] = `
Array [
  Array [
    <ForwardRef(PanelBody)
      className="blocks-font-size"
      key="2---0/.0"
      title="Text Settings"
    >
      <div
        className="components-panel__body blocks-font-size is-opened"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={true}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={true}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
                    />
                  </g>
                </svg>
              </span>
              Text Settings
            </button>
          </ForwardRef(Button)>
        </h2>
        <fieldset>
          <legend>
            Font Size
          </legend>
          <div
            className="components-font-size-picker__controls"
          >
            <div
              className="components-base-control components-font-size-picker__select"
            >
              <div
                className="components-base-control__field"
              >
                <label
                  className="components-base-control__label screen-reader-text"
                  htmlFor="inspector-select-control-0"
                >
                  Choose preset
                </label>
                <select
                  className="components-select-control__input"
                  id="inspector-select-control-0"
                  multiple={false}
                  onChange={[Function]}
                  value="normal"
                >
                  <option
                    key="Small-small-0"
                    value="small"
                  >
                    Small
                  </option>
                  <option
                    key="Normal-normal-1"
                    value="normal"
                  >
                    Normal
                  </option>
                  <option
                    key="Medium-medium-2"
                    value="medium"
                  >
                    Medium
                  </option>
                  <option
                    key="Large-large-3"
                    value="large"
                  >
                    Large
                  </option>
                  <option
                    key="Huge-huge-4"
                    value="huge"
                  >
                    Huge
                  </option>
                  <option
                    key="Custom-custom-5"
                    value="custom"
                  >
                    Custom
                  </option>
                </select>
              </div>
            </div>
            <input
              aria-label="Custom"
              className="components-range-control__number"
              onChange={[Function]}
              type="number"
              value=""
            />
            <ForwardRef(Button)
              className="components-color-palette__clear"
              disabled={true}
              isDefault={true}
              isSmall={true}
              onClick={[Function]}
              type="button"
            >
              <button
                className="components-button components-color-palette__clear is-button is-default is-small"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Reset
              </button>
            </ForwardRef(Button)>
          </div>
        </fieldset>
        <div
          className="components-base-control components-toggle-control"
        >
          <div
            className="components-base-control__field"
          >
            <span
              className="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-0__help"
                checked={false}
                className="components-form-toggle__input"
                id="inspector-toggle-control-0"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="components-form-toggle__track"
              />
              <span
                className="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                className="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              className="components-toggle-control__label"
              htmlFor="inspector-toggle-control-0"
            >
              Drop Cap
            </label>
          </div>
          <p
            className="components-base-control__help"
            id="inspector-toggle-control-0__help"
          >
            Toggle to show a large initial letter.
          </p>
        </div>
      </div>
    </ForwardRef(PanelBody)>,
    <ForwardRef(PanelBody)
      className="editor-panel-color-settings block-editor-panel-color-settings"
      hasColorsToChoose={true}
      initialOpen={false}
      title={
        <span
          className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
        >
          Color Settings
        </span>
      }
    >
      <div
        className="components-panel__body editor-panel-color-settings block-editor-panel-color-settings"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={false}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={false}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
                    />
                  </g>
                </svg>
              </span>
              <span
                className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
              >
                Color Settings
              </span>
            </button>
          </ForwardRef(Button)>
        </h2>
      </div>
    </ForwardRef(PanelBody)>,
    <ForwardRef(PanelBody)
      className="inspector-test"
      key="5---0/.0"
    >
      <div
        className="components-panel__body inspector-test is-opened"
      >
        <a
          href="http://example.com/test1"
          key="3---0/.0"
        >
          test1
        </a>
        <a
          href="http://example.com/test2"
          key="4---0/.0"
        >
          test2
        </a>
        <div
          className="additional-inspector-test1"
          key="additional-inspector-0"
        >
          test1
        </div>
        <div
          className="additional-inspector-test2"
          key="additional-inspector-1"
        >
          test2
        </div>
      </div>
    </ForwardRef(PanelBody)>,
  ],
  Array [
    <div>
       
      Array [
        "",
        "",
        <div
          className="editor-rich-text block-editor-rich-text"
        >
          <p
            aria-activedescendant={null}
            aria-label="Paragraph block"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text editor-rich-text__editable block-editor-rich-text__editable wp-block-paragraph test-block-edit"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "﻿<span data-rich-text-placeholder=\\"Start writing or type / to choose a block\\" contenteditable=\\"false\\"></span>",
              }
            }
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "backgroundColor": undefined,
                "color": undefined,
                "direction": undefined,
                "fontSize": undefined,
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />
        </div>,
      ]
       
    </div>,
    "",
    "",
    "",
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 1: test--1 1`] = `
Array [
  Array [
    <ForwardRef(PanelBody)
      className="blocks-font-size"
      key="7---0/.0"
      title="Text Settings"
    >
      <div
        className="components-panel__body blocks-font-size is-opened"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={true}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={true}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
                    />
                  </g>
                </svg>
              </span>
              Text Settings
            </button>
          </ForwardRef(Button)>
        </h2>
        <fieldset>
          <legend>
            Font Size
          </legend>
          <div
            className="components-font-size-picker__controls"
          >
            <div
              className="components-base-control components-font-size-picker__select"
            >
              <div
                className="components-base-control__field"
              >
                <label
                  className="components-base-control__label screen-reader-text"
                  htmlFor="inspector-select-control-1"
                >
                  Choose preset
                </label>
                <select
                  className="components-select-control__input"
                  id="inspector-select-control-1"
                  multiple={false}
                  onChange={[Function]}
                  value="normal"
                >
                  <option
                    key="Small-small-0"
                    value="small"
                  >
                    Small
                  </option>
                  <option
                    key="Normal-normal-1"
                    value="normal"
                  >
                    Normal
                  </option>
                  <option
                    key="Medium-medium-2"
                    value="medium"
                  >
                    Medium
                  </option>
                  <option
                    key="Large-large-3"
                    value="large"
                  >
                    Large
                  </option>
                  <option
                    key="Huge-huge-4"
                    value="huge"
                  >
                    Huge
                  </option>
                  <option
                    key="Custom-custom-5"
                    value="custom"
                  >
                    Custom
                  </option>
                </select>
              </div>
            </div>
            <input
              aria-label="Custom"
              className="components-range-control__number"
              onChange={[Function]}
              type="number"
              value=""
            />
            <ForwardRef(Button)
              className="components-color-palette__clear"
              disabled={true}
              isDefault={true}
              isSmall={true}
              onClick={[Function]}
              type="button"
            >
              <button
                className="components-button components-color-palette__clear is-button is-default is-small"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Reset
              </button>
            </ForwardRef(Button)>
          </div>
        </fieldset>
        <div
          className="components-base-control components-toggle-control"
        >
          <div
            className="components-base-control__field"
          >
            <span
              className="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-1__help"
                checked={false}
                className="components-form-toggle__input"
                id="inspector-toggle-control-1"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="components-form-toggle__track"
              />
              <span
                className="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                className="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              className="components-toggle-control__label"
              htmlFor="inspector-toggle-control-1"
            >
              Drop Cap
            </label>
          </div>
          <p
            className="components-base-control__help"
            id="inspector-toggle-control-1__help"
          >
            Toggle to show a large initial letter.
          </p>
        </div>
      </div>
    </ForwardRef(PanelBody)>,
    <ForwardRef(PanelBody)
      className="editor-panel-color-settings block-editor-panel-color-settings"
      hasColorsToChoose={true}
      initialOpen={false}
      title={
        <span
          className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
        >
          Color Settings
        </span>
      }
    >
      <div
        className="components-panel__body editor-panel-color-settings block-editor-panel-color-settings"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={false}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={false}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
                    />
                  </g>
                </svg>
              </span>
              <span
                className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
              >
                Color Settings
              </span>
            </button>
          </ForwardRef(Button)>
        </h2>
      </div>
    </ForwardRef(PanelBody)>,
    <ForwardRef(PanelBody)
      className="inspector-test"
      initialOpen={false}
      key="10---0/.0"
    >
      <div
        className="components-panel__body inspector-test"
      />
    </ForwardRef(PanelBody)>,
  ],
  Array [
    <div>
       
      Array [
        "",
        "",
        <div
          className="editor-rich-text block-editor-rich-text"
        >
          <p
            aria-activedescendant={null}
            aria-label="Paragraph block"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text editor-rich-text__editable block-editor-rich-text__editable wp-block-paragraph test-block-edit"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "﻿<span data-rich-text-placeholder=\\"Start writing or type / to choose a block\\" contenteditable=\\"false\\"></span>",
              }
            }
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "backgroundColor": undefined,
                "color": undefined,
                "direction": undefined,
                "fontSize": undefined,
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />
        </div>,
      ]
       
    </div>,
    "",
    "",
    "",
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 2: test--2 1`] = `
Array [
  Array [
    <ForwardRef(PanelBody)
      className="blocks-font-size"
      key="12---0/.0"
      title="Text Settings"
    >
      <div
        className="components-panel__body blocks-font-size is-opened"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={true}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={true}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
                    />
                  </g>
                </svg>
              </span>
              Text Settings
            </button>
          </ForwardRef(Button)>
        </h2>
        <fieldset>
          <legend>
            Font Size
          </legend>
          <div
            className="components-font-size-picker__controls"
          >
            <div
              className="components-base-control components-font-size-picker__select"
            >
              <div
                className="components-base-control__field"
              >
                <label
                  className="components-base-control__label screen-reader-text"
                  htmlFor="inspector-select-control-2"
                >
                  Choose preset
                </label>
                <select
                  className="components-select-control__input"
                  id="inspector-select-control-2"
                  multiple={false}
                  onChange={[Function]}
                  value="normal"
                >
                  <option
                    key="Small-small-0"
                    value="small"
                  >
                    Small
                  </option>
                  <option
                    key="Normal-normal-1"
                    value="normal"
                  >
                    Normal
                  </option>
                  <option
                    key="Medium-medium-2"
                    value="medium"
                  >
                    Medium
                  </option>
                  <option
                    key="Large-large-3"
                    value="large"
                  >
                    Large
                  </option>
                  <option
                    key="Huge-huge-4"
                    value="huge"
                  >
                    Huge
                  </option>
                  <option
                    key="Custom-custom-5"
                    value="custom"
                  >
                    Custom
                  </option>
                </select>
              </div>
            </div>
            <input
              aria-label="Custom"
              className="components-range-control__number"
              onChange={[Function]}
              type="number"
              value=""
            />
            <ForwardRef(Button)
              className="components-color-palette__clear"
              disabled={true}
              isDefault={true}
              isSmall={true}
              onClick={[Function]}
              type="button"
            >
              <button
                className="components-button components-color-palette__clear is-button is-default is-small"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Reset
              </button>
            </ForwardRef(Button)>
          </div>
        </fieldset>
        <div
          className="components-base-control components-toggle-control"
        >
          <div
            className="components-base-control__field"
          >
            <span
              className="components-form-toggle"
            >
              <input
                aria-describedby="inspector-toggle-control-2__help"
                checked={false}
                className="components-form-toggle__input"
                id="inspector-toggle-control-2"
                onChange={[Function]}
                type="checkbox"
              />
              <span
                className="components-form-toggle__track"
              />
              <span
                className="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                className="components-form-toggle__off"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 6 6"
                width="6"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
                />
              </svg>
            </span>
            <label
              className="components-toggle-control__label"
              htmlFor="inspector-toggle-control-2"
            >
              Drop Cap
            </label>
          </div>
          <p
            className="components-base-control__help"
            id="inspector-toggle-control-2__help"
          >
            Toggle to show a large initial letter.
          </p>
        </div>
      </div>
    </ForwardRef(PanelBody)>,
    <ForwardRef(PanelBody)
      className="editor-panel-color-settings block-editor-panel-color-settings"
      hasColorsToChoose={true}
      initialOpen={false}
      title={
        <span
          className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
        >
          Color Settings
        </span>
      }
    >
      <div
        className="components-panel__body editor-panel-color-settings block-editor-panel-color-settings"
      >
        <h2
          className="components-panel__body-title"
        >
          <ForwardRef(Button)
            aria-expanded={false}
            className="components-panel__body-toggle"
            onClick={[Function]}
          >
            <button
              aria-expanded={false}
              className="components-button components-panel__body-toggle"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  aria-hidden="true"
                  className="components-panel__arrow"
                  focusable="false"
                  height="24px"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0,0h24v24H0V0z"
                      fill="none"
                    />
                  </g>
                  <g>
                    <path
                      d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
                    />
                  </g>
                </svg>
              </span>
              <span
                className="editor-panel-color-settings__panel-title block-editor-panel-color-settings__panel-title"
              >
                Color Settings
              </span>
            </button>
          </ForwardRef(Button)>
        </h2>
      </div>
    </ForwardRef(PanelBody)>,
  ],
  Array [
    <div>
       
      Array [
        "",
        "",
        <div
          className="editor-rich-text block-editor-rich-text"
        >
          <p
            aria-activedescendant={null}
            aria-label="Paragraph block"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text editor-rich-text__editable block-editor-rich-text__editable wp-block-paragraph test-block-edit"
            contentEditable={true}
            dangerouslySetInnerHTML={
              Object {
                "__html": "﻿<span data-rich-text-placeholder=\\"Start writing or type / to choose a block\\" contenteditable=\\"false\\"></span>",
              }
            }
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "backgroundColor": undefined,
                "color": undefined,
                "direction": undefined,
                "fontSize": undefined,
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />
        </div>,
      ]
       
    </div>,
    "",
    "",
  ],
]
`;
